//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table feature_flags {
  id String [pk]
  key String [unique, not null]
  description String
  isEnabled Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userOverrides user_overrides [not null]
  groupOverrides group_overrides [not null]
  regionOverrides region_overrides [not null]
}

Table user_overrides {
  id String [pk]
  featureFlagId String [not null]
  userId String [not null]
  isEnabled Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  featureFlag feature_flags [not null]

  indexes {
    (featureFlagId, userId) [unique]
  }
}

Table group_overrides {
  id String [pk]
  featureFlagId String [not null]
  groupName String [not null]
  isEnabled Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  featureFlag feature_flags [not null]

  indexes {
    (featureFlagId, groupName) [unique]
  }
}

Table region_overrides {
  id String [pk]
  featureFlagId String [not null]
  region String [not null]
  isEnabled Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  featureFlag feature_flags [not null]

  indexes {
    (featureFlagId, region) [unique]
  }
}

Ref: user_overrides.featureFlagId > feature_flags.id [delete: Cascade]

Ref: group_overrides.featureFlagId > feature_flags.id [delete: Cascade]

Ref: region_overrides.featureFlagId > feature_flags.id [delete: Cascade]